# kmap

./: LICENSE  README.md  env.yml  environment.yml  pyproject.toml  requirements.txt
src/kmap/: __init__.py  cli.py  default_config.toml  default_motif_def_table.csv  kmer_count.py  motif_discovery.py  taichi_core.py  util.py  visualization.py
tests/: inimotif.py  kmap_tests.py  test.fa  test_kmer_count.py
