[project]
name = "kmer-map"
version = "0.0.7"
authors = [
  { name="Chengbo Fu, Lu Cheng.", email="lu.cheng.ac@gmail.com" },
]
description = "A package for visualizing kmers."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["kmap", "kmer", "visualization", "dimensionality reduction", "DNA", "sequences", "umap"]
dependencies = [
    "requests > 2",
    "scipy >= 1.9.3",
    "numpy >= 1.23.3",
    "matplotlib >= 3.6.2",
    "pandas >= 1.5.0",
    "click >= 8.0.4",
    "taichi >= 1.5.0",
    "biopython >= 1.78",
    "tomli-w >= 1.0.0",
    "logomaker >= 0.8",
    "networkx >= 3.3",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kmap = ["default_config.toml", "default_motif_def_table.csv"]

[project.scripts]
kmap = "kmap:main"

[project.urls]
Homepage = "https://github.com/chengl7-lab/kmap"
Repository = "https://github.com/chengl7-lab/kmap.git"
Issues = "https://github.com/chengl7-lab/kmap/issues"